fixed audio issues and positioning on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -756,7 +756,7 @@
       flex-direction: column;
       align-items: center;
       position: absolute;
-      top: 50%;
+      top: 42%;
       left: 50%;
       transform: translate(-50%, -58%);
       z-index: 3;
